[package]
name = "chisel"
version = "0.1.0"
edition = "2024"
authors     = ["Jonathan Wahrenberg <jonathan@wahrenberg.com>"]
license     = "Apache-2.0"
description = "CLI frontend for Chisel terminal text editor"
repository  = "https://github.com/Chill-Sam/chisel"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
editor-core = { path = "../editor-core" }
