[package]
name        = "editor-core"
version     = "0.1.0"
edition     = "2024"
authors     = ["Jonathan Wahrenberg <jonathan@wahrenberg.com>"]
license     = "Apache-2.0"
description = "Core library for Chisel"
repository  = "https://github.com/Chill-Sam/chisel"

[dependencies]

[dev-dependencies]
tempfile = "3"
